<resources>
    <string name="app_name">大学记</string>
    <string name="chanel_name">channelName</string>
    <string name="chanel_description">chaneldescription</string>
    <string name="alarm_set_select_date">选 择 日 期</string>
    <string name="alarm_set_select_time">选 择 时 间</string>
    <string name="alarm_set_repeat_everyday">每天重复</string>
    <string name="alarm_set_goback">返回</string>
    <string name="alarm_set_ok">确定</string>
    <string name="login_welcome">欢迎来到大学记</string>
    <string name="login_username">账号:</string>
    <string name="login_password">密码: 字母或数字</string>
    <string name="login_button_text">登 录</string>
    <string name="login_new_user">新用户</string>
    <string name="login_remember_password">记住密码</string>
    <string name="register_password">密码:字母或数字</string>
    <string name="register_password_again">请再次确认您的密码</string>
    <string name="register_button_text">注 册</string>
    <string name="edit_word_goback">返回</string>
    <string name="edit_word_save">保存</string>
    <string name="nav_head_city">城市</string>
    <string name="nav_head_temperature">温度</string>
    <string name="nav_head_weather">天气</string>
    <string name="recite_word_recite">背诵</string>
    <string name="recite_word_test">测试</string>
    <string name="recite_word_lastone">上一个</string>
    <string name="recite_word_answer">答案</string>
    <string name="recite_word_nextone">下一个</string>
    <string name="search_word_button_text">搜索</string>
    <string name="search_word_tip">轻按编辑 长按加入我的词库</string>
    <string name="word_history_display_process">显示进度值</string>
    <string name="word_history_refresh">刷 新</string>
    <string name="activity_edit_group_management">分组管理</string>
    <string name="activity_edit_all_notes">全部笔记</string>
    <string name="activity_edit_work_notes">工 作</string>
    <string name="activity_edit_study_notes">学 习</string>
    <string name="activity_edit_life_notes">生 活</string>
    <string name="activity_edit_no_group_notes">未分组</string>
    <string name="activity_main_sort_by_date">按修改日期排序</string>
    <string name="activity_main_sort_new_to_old"><![CDATA[新->旧]]></string>
    <string name="activity_main_sort_old_to_new"><![CDATA[旧->新]]></string>
    <string name="activity_main_sort_by_create">按创建先后排序</string>
    <string name="activity_main_sort_last_to_now"><![CDATA[从前->最近]]></string>
    <string name="activity_main_sort_now_to_last"><![CDATA[最近->以前]]></string>
    <string name="nav_left_head_img">头像</string>
    <string name="nav_left_nav_left_petname">昵称</string>
    <string name="nav_left_password">密码</string>
    <string name="nav_left_personality">个性签名</string>
    <string name="nav_left_open_whether">打开天气</string>
    <string name="nav_left_change_mode">切换模式</string>
    <string name="nav_right_all_notes">全部笔记</string>
    <string name="nav_right_work_notes">工 作</string>
    <string name="nav_right_study_notes">学 习</string>
    <string name="nav_right_life_notes">生 活</string>
    <string name="nav_right_no_group_notes">未分组</string>
    <string name="nav_right_nodo_notes">待 办</string>

    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="login">登陆</string>


    <string name="course_app_name">大学记课程表</string>

    <string name="dayOfWeek">周</string>
    <string name="single_week">单周</string>
    <string name="double_week">双周</string>
    <string name="select_dialog">选择</string>
    <string name="photo_select">从相册中选择</string>
    <string name="select_all">全选</string>
    <string name="delete">删除</string>
    <string name="menu_config">设置</string>
    <!--    <string name="menu_share">分享</string>-->
    <string name="transparent">透明度</string>
    <string name="bg_img">背景图片</string>
    <!--    <string name="menu_update">检查更新</string>-->

    <string name="menu_apply">应用</string>

    <!--    CourseDetailsActivity ActionBar标题-->
    <string name="course_details">课程详情</string>
    <string name="set_time">设置课程时间</string>
    <!--    EditActivity ActionBar标题-->
    <string name="course_edit">编辑课程</string>

    <string name="day_of_week">第%1$d周</string>
    <string name="week_of_term_format">%1$s [%2$s]</string>

    <!--    节数-->
    <string name="schedule_section">%1$s %2$d-%3$d节</string>


    <!--    MainActivity-->

    <string name="course_name">课名</string>
    <string name="classroom">教室</string>
    <string name="week_of_term">周数</string>
    <string name="classLength">节数</string>
    <string name="teacher">老师</string>

    <string name="mon">周一</string>
    <string name="tues">周二</string>
    <string name="wed">周三</string>
    <string name="thur">周四</string>
    <string name="fri">周五</string>
    <string name="sat">周六</string>
    <string name="sun">周日</string>


    <string name="menu_append">导入Excel课程表</string>
    <string name="menu_set_current_week">修改当前周数</string>
    <string name="menu_append_class">添加课程</string>

    <!--    EditActivity-->
    <string name="edit_course_btn">编辑</string>
    <string name="edit_text_hint">未输入</string>
    <string name="menu_save">保存</string>
    <string name="weekOptions">单双</string>
    <string name="week_of_term_example">示例:1,7,9,11&#8211;17,19(英文标点)</string>


    <!--    LoginActivity-->
    <!--    <string name="prompt_id">学号</string>-->
    <!--    <string name="prompt_password">密码</string>-->
    <!--    <string name="action_sign_in">登录</string>-->
    <!--    <string name="hint_random_code">验证码</string>-->
    <!--    <string name="title_activity_login">教务系统登录</string>-->

    <string name="hint_start_time">开始时间</string>
    <string name="hint_end_time">结束时间</string>

    <string name="menu_set_time">设置时间</string>
    <string name="menu_delete_time">删除所有时间</string>

    <string name="yes">确定</string>
    <string name="select_week_of_term">选择周数</string>

    <string name="delete_calendar_event">清除所有课程日程</string>
    <string name="create_calendar_event">添加所有课程日程</string>

    <string name="course_morning">今天也要努力加油鸭！！</string>
    <string name="course_afternoon">中  午</string>
    <string name="course_evening">晚  上</string>

    <!--    <string name="select_college">选择学校</string>-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>

</resources>
