<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/univ_mem_bg_login"
    android:orientation="vertical"
    tools:context="com.example.ui.LoginActivity">


    <TextView
        android:id="@+id/loginActivity_welcome"
        android:layout_width="208dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="104dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="104dp"
        android:gravity="center"
        android:text="@string/login_welcome"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/nav_left_head_image"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_below="@+id/loginActivity_welcome"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="280dp"
        android:background="@color/color_transparent"
        android:src="@drawable/univ_mem" />

    <EditText
        android:id="@+id/loginActivity_username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="380dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/login_username"
        android:padding="4dp"
        android:singleLine="true"
        android:textCursorDrawable="@drawable/univ_mem_edit_cursor_color"
        android:textSize="15sp"
        android:theme="@style/univ_mem_editText_style" />

    <EditText
        android:id="@+id/loginActivity_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginActivity_username"
        android:layout_centerInParent="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:padding="4dp"
        android:paddingBottom="4dp"
        android:singleLine="true"
        android:textCursorDrawable="@drawable/univ_mem_edit_cursor_color"
        android:textSize="15sp"
        android:theme="@style/univ_mem_editText_style" />

    <Button
        android:id="@+id/loginActivity_loginButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginActivity_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/univ_mem_button_bg_selector"
        android:text="@string/login_button_text"
        android:textColor="@color/white"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/loginActivity_newUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginActivity_loginButton"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="10dp"
        android:text="@string/login_new_user"
        android:textColor="@color/black" />

    <CheckBox
        android:id="@+id/loginActivity_rem_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginActivity_loginButton"
        android:layout_alignParentRight="true"
        android:layout_marginTop="3dp"
        android:layout_marginRight="70dp"
        android:text="@string/login_remember_password"
        android:textColor="@color/black" />

</RelativeLayout>
